EnvSetup/k8s/expiration-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          #image: us.gcr.io/ticketing-dev-403319/expiration
          image: srnsatya/expiration
