EnvSetup/k8s/expiration-redis-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          #image: us.gcr.io/ticketing-dev-403319/auth
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis
  ports:
    - name: expiration-redis
      protocol: TCP
      port: 6379
      targetPort: 6379 # default port
