EnvSetup/k8s/orders-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          #image: us.gcr.io/ticketing-dev-403319/orders
          image: srnsatya/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 5000
      targetPort: 5000
