EnvSetup/k8s/orders-mongo-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          #image: us.gcr.io/ticketing-dev-403319/orders
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
spec:
  selector:
    app: orders-mongo
  ports:
    - name: orders-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017 # default port
