EnvSetup/k8s/payments-mongo-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
        - name: payments-mongo
          #image: us.gcr.io/ticketing-dev-403319/payments
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-srv
spec:
  selector:
    app: payments-mongo
  ports:
    - name: payments-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017 # default port
