EnvSetup/k8s/tickets-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          #image: us.gcr.io/ticketing-dev-403319/tickets
          image: srnsatya/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 5000
      targetPort: 5000
