EnvSetup/k8s/tickets-mongo-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          #image: us.gcr.io/ticketing-dev-403319/tickets
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
    app: tickets-mongo
  ports:
    - name: tickets-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017 # default port
